--- a/Calculadora/index.html
+++ b/Calculadora/index.html
@@ -11,37 +11,39 @@
         <h1>Calculator</h1>
     </header>
     <main>
-        <div class="calculator">
-            <div class="display">
-                <input type="text">
+            <div class="calculator">
+                <div class="display">
+                    <input type="text" id="display-text">
+                </div>
+                <div class="number">
+                    <button class="btn-controller">1</button>
+                    <button class="btn-controller">2</button>
+                    <button class="btn-controller">3</button>
+                    <button class="btn-controller">+</button> 
+                    <button class="btn-controller">4</button>
+                    <button class="btn-controller">5</button>
+                    <button class="btn-controller">6</button>
+                    <button class="btn-controller">-</button>
+                    <button class="btn-controller">7</button>
+                    <button class="btn-controller">8</button>
+                    <button class="btn-controller">9</button>
+                    <button class="btn-controller">x</button>
+                    <button class="btn-controller">.</button>
+                    <button class="btn-controller">0</button> 
+                    <button class="btn-controller">,</button>
+                    <button class="btn-controller">/</button>
+                </div>
+                <div class="controllers">
+                    <button onclick="evaluatez()"> = </button>
+                </div>
             </div>
-            <div class="number">
-                <button>1</button>
-                <button>2</button>
-                <button>3</button>
-                <button>/</button>
-                <button>4</button>
-                <button>5</button>
-                <button>6</button>
-                <button>x</button>
-                <button>7</button>
-                <button>8</button>
-                <button>9</button>
-                <button>.</button>
-                <button>,</button>
-                <button>+</button>  
-                <button>0</button>
-                <button>-</button>
-            </div>
-            <div class="controllers">
-                <button> = </button>
-            </div>
-        </div>
+        
     </main>
     <footer>
         <a href="">Linkedin</a>
         <a href="">GitHub</a>
         <a href="">Mail</a>
     </footer>
+    <script src="./script.js"></script>
 </body>
 </html>
